package Enums;

public enum CourseType {
    DISTANCIEL,
    PRESENTIEL
}